--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <androidx.fragment.app.FragmentContainerView-->
-<!--        android:id="@+id/home_fragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-        <TextView
-            android:id="@+id/tv_counter"
-            android:layout_width="match_parent"
-            android:layout_marginTop="100dp"
-            android:layout_height="450dp"
-            android:paddingTop="120dp"
-            android:text="@string/count"
-            android:textSize="150sp"
-            android:textColor="#000"
-            android:textAlignment="center"/>
-
-        <ImageButton
-            android:id="@+id/add"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="550dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_add"/>
-
-        <ImageButton
-            android:id="@+id/subs"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="650dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_subs"/>
+            app:menu="@menu/option_menu" />
 
-<!--    </androidx.fragment.app.FragmentContainerView>-->
+           <TextView
+                    android:id="@+id/tv_counter"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="100dp"
+                    android:layout_height="450dp"
+                    android:paddingTop="120dp"
+                    android:text="@string/count"
+                    android:textSize="150sp"
+                    android:textColor="#000"
+                    android:textAlignment="center"/>
+
+                <ImageButton
+                    android:id="@+id/add"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="550dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_add"/>
+
+                <ImageButton
+                    android:id="@+id/subs"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="650dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/ic_subs"/>
 
 </RelativeLayout>
